logs/validate_stage5_imports_1765499078.log
2025-12-11 19:24:38 [INFO] [__main__:51] Validation log file: /gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc/logs/validate_stage5_imports_1765499078.log
2025-12-11 19:24:38 [DEBUG] [__main__:52] ================================================================================
2025-12-11 19:24:38 [DEBUG] [__main__:53] Starting Stage 5 import validation
2025-12-11 19:24:38 [DEBUG] [__main__:54] ================================================================================
2025-12-11 19:24:38 [DEBUG] [__main__:289] Starting validation process...
2025-12-11 19:24:38 [INFO] [__main__:61] ================================================================================
2025-12-11 19:24:38 [INFO] [__main__:62] Validating Stage 5 imports...
2025-12-11 19:24:38 [INFO] [__main__:63] ================================================================================
2025-12-11 19:24:38 [DEBUG] [__main__:64] Project root: /gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc
2025-12-11 19:24:38 [DEBUG] [__main__:65] Python path: ['/gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc', '/gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc/src/scripts', '/sw/pkgs/arc/python3.11-anaconda/2024.02-1/lib/python311.zip']
2025-12-11 19:24:38 [DEBUG] [__main__:66] Python version: 3.11.7 (main, Dec 15 2023, 18:12:31) [GCC 11.2.0]
2025-12-11 19:24:38 [INFO] [__main__:69] 
[1/8] Testing lib.models imports...
2025-12-11 19:24:38 [DEBUG] [__main__:70] Attempting to import from lib.models...
2025-12-11 19:24:38 [DEBUG] [__main__:72] Importing VideoConfig, VideoDataset, variable_ar_collate, PretrainedInceptionVideoModel, VariableARVideoModel
2025-12-11 19:25:59 [DEBUG] [__main__:80] ✓ VideoConfig imported: <class 'lib.models.video.VideoConfig'>
2025-12-11 19:25:59 [DEBUG] [__main__:81] ✓ VideoDataset imported: <class 'lib.models.video.VideoDataset'>
2025-12-11 19:25:59 [DEBUG] [__main__:82] ✓ variable_ar_collate imported: <function variable_ar_collate at 0x1525b93e7420>
2025-12-11 19:25:59 [DEBUG] [__main__:83] ✓ PretrainedInceptionVideoModel imported: <class 'lib.models.video.PretrainedInceptionVideoModel'>
2025-12-11 19:25:59 [DEBUG] [__main__:84] ✓ VariableARVideoModel imported: <class 'lib.models.video.VariableARVideoModel'>
2025-12-11 19:25:59 [INFO] [__main__:85]   ✓ All lib.models imports successful
2025-12-11 19:25:59 [INFO] [__main__:95] 
[2/8] Testing stage5 pipeline imports...
2025-12-11 19:25:59 [DEBUG] [__main__:96] Attempting to import stage5_train_models from lib.training.pipeline
2025-12-11 19:26:32 [CRITICAL] [__main__:310] 

✗ Unexpected error during validation: invalid syntax (pipeline.py, line 1039)
2025-12-11 19:26:32 [ERROR] [__main__:311] Unexpected exception during validation:
Traceback (most recent call last):
  File "/gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc/src/scripts/validate_stage5_imports.py", line 290, in <module>
    exit_code = validate_imports()
                ^^^^^^^^^^^^^^^^^^
  File "/gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc/src/scripts/validate_stage5_imports.py", line 98, in validate_imports
    from lib.training.pipeline import stage5_train_models
  File "/gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc/lib/training/__init__.py", line 83, in <module>
    from .pipeline import stage5_train_models
  File "/gpfs/accounts/si670f25_class_root/si670f25_class/santoshd/fvc/lib/training/pipeline.py", line 1039
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
2025-12-11 19:26:32 [DEBUG] [__main__:314] Performing cleanup before exit...
2025-12-11 19:26:32 [DEBUG] [__main__:317] Exiting with code 1 due to unexpected error
